--- a/node-red-contrib-teamogy-postgres/package.json
+++ b/node-red-contrib-teamogy-postgres/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tf-postgres",
+  "name": "node-red-contrib-teamogy-postgres",
   "version": "0.0.1",
   "description": "",
   "scripts": {
