--- a/node-red-contrib-teamogy-postgres/package.json
+++ b/node-red-contrib-teamogy-postgres/package.json
@@ -1,10 +1,19 @@
 {
   "name": "node-red-contrib-teamogy-postgres",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+   "keywords": [
+        "node-red",
+        "teamogy",
+        "postgres"
+   ],
+   "repository": {
+        "type": "git",
+        "url": "https://github.com/teamogy-team/node-red-nodes"
+   },
   "author": "",
   "license": "",
   "node-red": {
