--- a/node-red-contrib-teamogy-postgres/package.json
+++ b/node-red-contrib-teamogy-postgres/package.json
@@ -1,23 +1,27 @@
 {
   "name": "node-red-contrib-teamogy-postgres",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
+    "keywords": [
     "node-red",
     "teamogy",
     "postgres"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/teamogy-team/node-red-nodes"
+    "url": "git+https://github.com/teamogy-team/node-red-nodes.git"
   },
   "author": "",
   "license": "",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "node-red": {
-    "nodes": {
+    "version": ">=2.0.0",
+      "nodes": {
       "postgres-client": "postgres-client.js"
     }
   },
