--- a/node-red-contrib-teamogy-api/package.json
+++ b/node-red-contrib-teamogy-api/package.json
@@ -1,9 +1,12 @@
 {
   "name": "node-red-contrib-teamogy-api",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "keywords": [
     "node-red",
@@ -17,11 +20,9 @@
   "author": "",
   "license": "",
   "node-red": {
+    "version": ">=4.0.0",
     "nodes": {
       "teamogy-client": "teamogy-client.js"
     }
-  },
-  "dependencies": {
-    "node-fetch": "^3.3.2"
   }
 }
